--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h2>Hello this is Suriya!!</h2>
     <h2>New brach created and added..</h2>
+    This is new line of code
 </body>
 </html>
